--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/MyTaskWidget/my-task-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/MyTaskWidget/my-task-widget.less
@@ -114,7 +114,7 @@
   }
 }
 
-.widget-header-options {
+.my-task-widget-container .widget-header-options {
   padding: 10px;
   height: 40px;
   min-width: 40px;
@@ -132,7 +132,6 @@
     background-color: @grey-1;
     border-color: @primary-color;
   }
-
   .widget-header-menu {
     padding: 8px;
     border-radius: 12px;
